--- a/kooplexhub/kooplex/hub/templates/app/todeploy.html
+++ b/kooplexhub/kooplex/hub/templates/app/todeploy.html
@@ -2,42 +2,88 @@
 
 {% block content %}
 
-<h2>Convert notebooks to html</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="toconvertForm">
-            <form action="{% url 'notebooks-convert-html' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="id_message" class="col-md-2 control-label">Description: </label>
-                    <div class="col-md-10">
-                        <input id="id_message" type="text" name="message"
-                        value="A great project">
-                    </div>
+
+    <div class="row">
+        <div class=" col-md-10 col-sm-10 col-xs-12">
+
+            <div class="panel panel-default ">
+                <div class="panel-heading">
+                    <h2>Publish your work</h2>
+                    <h4>Convert notebooks to <strong>html</strong> or create <strong>dashboard</strong></h4>
                 </div>
-                <div class="form-group">
-                    {% for item in ipynbs %}
-                        <input type="checkbox" value="toconvert" name="{{ item }}">{{ item }}<br>
-                    {% endfor %}
+                <div class="panel-body">
+
+                    <section id="toconvertForm">
+                        <form action="{% url 'notebooks-convert-html' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
+                        {% csrf_token %}
+                        <div style="padding-left: 20px;">
+                        <div class="well"> <strong>Notebooks</strong> These notebooks will be converted to html and accessible in the <a href="/hub/worksheets" target="_blank" >Reports</a> section</div>
+                        <div class="form-group">
+                            {% for item in ipynbs %}
+                                <input type="checkbox" value="ipynb_file" name="{{ item }}"> {{ item }}<br>
+                            {% endfor %}
+                        </div>
+                        <div class="well"> <strong>Data files</strong> These files will be copied next to the deployed notebooks</div>
+                        <div class="form-group">
+                            {% for item in other_files %}
+                                <input type="checkbox" value="other_file" name="{{ item }}"> {{ item }}<br>
+                            {% endfor %}
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="hidden" name="project_owner" value="{{ project_owner }}" />
+                                <input type="hidden" name="project_name" value="{{ project_name }}" />
+                                <input type="hidden" name="project_id" value="{{ project_id }}" />
+                                <input type="hidden" name="notebook_path_dir" value="{{ notebook_path_dir }}" />
+                                <input type="hidden" name="notebook_id" value="{{ notebook_id }}" />
+                                <input type="hidden" name="toconvert_files" value="" />
+                                <input type="hidden" name="ipynb_files" value="" />
+                                <input type="hidden" name="other_files" value="" />
+                                <input type="submit" name="html" value="Convert to html" class="btn btn-default" />
+                                <input type="submit" name="dashboard" value="Deploy as dashboard" class="btn btn-default" />
+                            </div>
+                        </div>
+                        </div>
+                        </form>
+                    </section>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="hidden" name="project_owner" value="{{ project_owner }}" />
-                        <input type="hidden" name="project_name" value="{{ project_name }}" />
-                        <input type="hidden" name="project_id" value="{{ project_id }}" />
-                        <input type="hidden" name="notebook_path_dir" value="{{ notebook_path_dir }}" />
-                        <input type="hidden" name="notebook_id" value="{{ notebook_id }}" />
-                        <input type="hidden" name="toconvert_files" value="" />
-                        <input type="submit" value="Convert to html" class="btn btn-default" />
-                    </div>
-                </div>
-            </form>
-        </section>
-    </div>
-</div>
+            </div>
+
+        </div>
+        </div>
 
     <script>
         function collectCheckedElements() {
+            var inputs = document.getElementsByTagName("input");
+            var ipynb_files = "'"
+            var other_files = "'"
+            for (var i = 1; i < inputs.length; i++) {
+                if (inputs[i].type == "checkbox") {
+                    if (inputs[i].value == "ipynb_file") {
+                        if (inputs[i].checked) {
+                            ipynb_files += inputs[i].name + ",";
+                        }
+
+                    }
+                    if (inputs[i].value == "other_file") {
+                        if (inputs[i].checked) {
+                            other_files += inputs[i].name + ",";
+                        }
+
+                    }
+                }
+            }
+            if(ipynb_files.length > 0) {
+                ipynb_files = ipynb_files.substring(1, ipynb_files.length - 1);
+            }
+            if(other_files.length > 0) {
+                other_files = other_files.substring(1, other_files.length - 1);
+            }
+            document.getElementsByName("ipynb_files")[0].value = ipynb_files;
+            document.getElementsByName("other_files")[0].value = other_files;
+        }
+
+         function collectCheckedElements22() {
             var inputs = document.getElementsByTagName("input");
             var toconvert_files = "'"
             for (var i = 1; i < inputs.length; i++) {
@@ -45,7 +91,7 @@
                     if (inputs[i].checked) {
                             toconvert_files += inputs[i].name + ",";
                     }
-                    
+
                 }
             }
             if(toconvert_files.length > 0) {
