--- a/kooplexhub/kooplex/hub/templates/app/contact.html
+++ b/kooplexhub/kooplex/hub/templates/app/contact.html
@@ -8,6 +8,7 @@
 <address>
     Eotvos Lorand University<br />
     Budapest, Hungary<br />
+david.visontai at complex.elte.hu
 </address>
 
 {% endblock %}
