--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -36,7 +36,7 @@
             </div>
       <div class="caption">
         <h3> Notebook projects </h3>
-        <p>Manage private jupyter notebook projects, meant for the individual reseracher.</p>
+        <p>Manage private jupyter notebook projects, meant for the individual researcher.</p>
             {% if user.is_authenticated %}
         <p><a href="{% url 'notebooks' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Browse projects</a>
             </p>
