* remove outside reference to avoid browser complains

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -16,7 +16,7 @@
     <div class="thumbnail">
         <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: white;text-align: center;">
   <img
-    src="http://www.compare-europe.eu/-/media/Sites/compare-europe/News/Procedure.ashx?mw=700" style="height: 70px;padding-top: 10px 0px 10px;"
+    src="/static/app/content/notebook.jpeg" style="height: 70px;padding-top: 10px 0px 10px;"
     alt="Worksheets" >
             </div>
       <div class="caption">
