--- a/kooplexhub/kooplex/hub/templates/app/commit.html
+++ b/kooplexhub/kooplex/hub/templates/app/commit.html
@@ -20,18 +20,15 @@
                 </div>
                 <div class="form-group">
                     {% for item in committable_dict.d %}
-                        <!-- <input type="checkbox" value="deleted" name="{{ item }}">
-                        -->
+                        <input type="checkbox" value="deleted" name="{{ item }}">
                         {{ item }} (deleted)<br>
                     {% endfor %}
                     {% for item in committable_dict.m %}
-                        <!-- <input type="checkbox" value="modified" name="{{ item }}">
-                        -->
+                        <input type="checkbox" value="modified" name="{{ item }}">
                         {{ item }} (modified)<br>
                     {% endfor %}
                     {% for item in committable_dict.u %}
-                        <!-- <input type="checkbox" value="untracted" name="{{ item }}">
-                        -->
+                        <input type="checkbox" value="untracted" name="{{ item }}">
                         {{ item }} (untracted/renamed/new)<br>
                     {% endfor %}
                 </div>
@@ -60,31 +57,28 @@
     <script>
         function collectCheckedElements() {
             var inputs = document.getElementsByTagName("input");
-            var modified_files = "'";
-            var deleted_files = "'";
-            if (1==2) {
-                for (var i = 1; i < inputs.length; i++) {
-                    if (inputs[i].type == "checkbox") {
-                        if (inputs[i].checked) {
-                            if (inputs[i].value == "deleted") {
-                                deleted_files += inputs[i].name + ",";
-                            } else {
-                                modified_files += inputs[i].name + ",";
-                            }
-                            inputs[i].disabled = true;
+            var modified_files = "";
+            var deleted_files = "";
+            for (var i = 1; i < inputs.length; i++) {
+                if (inputs[i].type == "checkbox") {
+                    if (inputs[i].checked) {
+                        if (inputs[i].value == "deleted") {
+                            deleted_files += "'" + inputs[i].name + "',";
+                        } else {
+                            modified_files += "'" + inputs[i].name + "',";
                         }
+                        inputs[i].disabled = true;
                     }
                 }
-                if (modified_files.length > 0) {
-                    modified_files = modified_files.substring(0, modified_files.length - 1);
-                }
-                if (deleted_files.length > 0) {
-                    deleted_files = deleted_files.substring(0, deleted_files.length - 1);
-                }
-                modified_files += "'";
-                document.getElementsByName("modified_files")[0].value = modified_files;
-                document.getElementsByName("deleted_files")[0].value = deleted_files;
             }
+            if (modified_files.length > 0) {
+                modified_files = modified_files.substring(0, modified_files.length - 1);
+            }
+            if (deleted_files.length > 0) {
+                deleted_files = deleted_files.substring(0, deleted_files.length - 1);
+            }
+            document.getElementsByName("modified_files")[0].value = modified_files;
+            document.getElementsByName("deleted_files")[0].value = deleted_files;
         }
     </script>
 
