--- a/kooplexhub/kooplex/hub/templates/app/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/project-partial.html
@@ -68,22 +68,24 @@
 
             <!-- GIT RELATED STUFF -->
 
-                <div class=" col-md-3 col-sm-3 col-xs-12">
+                <div class=" col-md-4 col-sm-3 col-xs-12">
                     {%  if not publicvar %}
                         <div class="row">
-                            <a role="button" href="{% url 'notebooks-commitform' %}?project_owner={{ item.owner.username }}&project_name={{ item.name }}&notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}">
+                            <!--a role="button" href="{% url 'notebooks-commitform' %}?project_owner={{ item.owner.username }}&project_name={{ item.name }}&notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}">
                             <button role="button" type="button" class="btn btn-warning">
-                                <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Commit</button></a>
+                                <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Commit</button></a-->
+                            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#repo-commit-{{ item.name }}">
+                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Commit </button>
+                                {% include 'app/notebooks-commit.html' %}
+
                         {% if item.commits|length > 0 %}
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#repo-pull-{{ item.name }}">
-                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Revert</button>
-                            {% include 'app/notebooks-revert.html' %}
+                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Restore</button>
+                                {% include 'app/notebooks-revert.html' %}
 
                             {%  with lastcommit=item.commits|first %}
                                     <!-- <p><strong>Last commited at: </strong>{{ lastcommit.committed_at|slice:":10" }} {{ lastcommit.committed_at|slice:"11:-10" }}</p> -->
-                                    <p><strong>Last commited at: </strong>{{ lastcommit.kdate }} {{ lastcommit.ktime }} {{ lastcommit.ktime_zone }}</p>
-                                    <!--<p><strong>Commit message: </strong>{{ lastcommit.title }}</p>
-                                    <p><strong>Commited by: </strong>{{ lastcommit.author_name }}   </p>-->
+                                    <p><strong>Last commit at: </strong>{{ lastcommit.kdate }} {{ lastcommit.ktime }} {{ lastcommit.ktime_zone }}</p>
                             {% endwith %}
                                 {% endif %}
                         </div>
