--- a/kooplexhub/kooplex/hub/templates/app/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/project-partial.html
@@ -75,7 +75,7 @@
                             <button role="button" type="button" class="btn btn-warning">
                                 <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Commit</button></a-->
                             <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#repo-commit-{{ item.name }}">
-                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Commit </button>
+                                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Commit </button>
                                 {% include 'app/notebooks-commit.html' %}
 
                         {% if item.commits|length > 0 %}
