--- a/kooplexhub/kooplex/hub/templates/app/contact.html
+++ b/kooplexhub/kooplex/hub/templates/app/contact.html
@@ -6,9 +6,11 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Eotvos Lorand University<br />
-    Budapest, Hungary<br />
-david.visontai at complex.elte.hu
+
+    To reach the developers, please send a message to kooplex at complex.elte.hu.
+    To report problems or buggy features, please, file an issue at https://github.com/kooplex/kooplex-hub
+    There is manual at https://github.com/kooplex/kooplex-hub/wiki
+
 </address>
 
 {% endblock %}
