--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -86,17 +86,18 @@
   </div>
 
     </div>
-<div class="row">
-<footer class="bs-docs-footer" style="padding-top: 50px;padding-bottom: 50px;margin-top: 100px;color: #99979c;text-align: center;background-color: #2a2730;"> <div class="container"> 
-<ul class="bs-docs-footer-links"> 
-<li>  <a href="{% url 'about' %}">About</a></li>
- <li> <a href="{% url 'contact' %}">Contact</a></li> 
- </ul> 
+
+<footer class="bs-docs-footer" style="padding-top: 50px;padding-bottom: 50px;margin-top: 10px;color: #99979c;text-align: center;background-color: #2a2730;"> <div class="container">
+
+<ul>
+    <li>To reach the developers, please send a message to - <a href="#">kooplex at complex.elte.hu.</a></li>
+    <li>To report problems or buggy features, please, file an issue at - <a href="https://github.com/kooplex/kooplex-hub" target="_blank">https://github.com/kooplex/kooplex-hub</a></li>
+    <li>There is manual at - <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">https://github.com/kooplex/kooplex-hub/wiki </a></li>
+</ul>
+
  <p>Designed and built with all the love in the world by the <b>Kooplex
  Team</b>. We try to maintain it too! :)
  </div> </footer>
 
-    
-    </div>
 
 {% endblock %}
